# arc-neon

./: .gitignore  DEVELOPMENT.md  HACKING.md  INSTALL.md  README.md  autogen-custom.sh  autogen.sh  configure.ac  configure~
common/: Makefile.am
common/gnome-shell/3.36/sass/: _colors.scss  _common.scss
common/gtk-2.0/: Makefile.am
common/gtk-3.0/: Makefile.am  common.am
common/gtk-3.0/3.24/: Makefile.am
common/index/dark/: index.theme
extra/: arc-neon.gpa  colors.gpa
extra/chromium-extension/arc-dark/: Cached Theme.pak  manifest.json
extra/chromium-extension/arc-neon/: Cached Theme.pak  manifest.json
extra/discord/: ArcGlass.theme.css  ArcNeon.theme.css  README.md
extra/gedit/: arc-dark-v1.org  arc-dark-v2.xml  arc-darkest.xml  arc-neon.xml
extra/vscode/: settings.json
